--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+paho-mqtt==1.5.1
 requests==2.26.0
 simpleobsws==0.0.7
 urllib3==1.26.7
